# SentinelZero

./: .gitignore  CONTRIBUTING.md  README  RISK_MODEL.md  SECURITY.md  fix_imports.ps1  package-lock.json  package.json  pyproject.toml  requirements.txt  run_all_tests.ps1  run_all_tests_pro.ps1  run_analysis.py  run_full_simulation.py  run_full_simulation_prod.py  run_preprod.ps1  run_protocol.ps1  run_protocol_dashboard.ps1  run_tests_full.ps1  update_sentinel.ps1
.github/workflows/: ci.yml  data-update.yml  deploy.yml
api/: app.py
cache/: coingecko.json
docs/: CONCEPT.md
examples/: run_analysis.py  run_analysis_unified.py
scripts/: safe_update.ps1
sentinelzero.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sentinelzero/api/: app.py
sentinelzero/core/: analysis.py  engine.py  enums.py  models.py
sentinelzero/datasources/: base.py  coingecko.py  defillama.py  incidents.py
sentinelzero/examples/: run_analysis_unified.py
sentinelzero/reports/: formatter.py  schema.py
sentinelzero/scoring/: calculator.py  weights.py
sentinelzero/signals/: governance.py  liquidity.py  oracle.py
sentinelzero/tests/: test_engine.py
sentinelzero/utils/: cache.py  entity_resolver.py  resolver.py
tests/: test_examples.py  test_multiple_protocols.py  test_scoring.py  test_signals.py
