[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelzero"
version = "0.1.0"
description = "Post-Audit DeFi Risk Intelligence Engine"
authors = [{ name="SentinelZero Labs" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests"
]

[tool.setuptools.packages.find]
where = ["."]
